--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,7 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "path": "^0.12.7",
+    "stream-json": "^1.7.3",
     "uuid": "^8.3.0"
   }
 }
